# Gosling2

./: .gitattributes  .gitignore  .mutmut-cache  AGENTS.md  ALBUM_CHIP_FIX.md  ARCHITECTURE.md  CHANGELOG.md  CONSTITUTION.md  DATABASE.md  HANDOVER_SURGICAL_UPGRADE.md  ID3_ANALYSIS.md  METADATA_CONSTITUTION.md  MIGRATION.md  MIGRATION_GAPS.md  MORNING_NOTES.md  PROJECT_SUMMARY.md  QUICK_START.md  README.md  RESEED.bat  ROADMAP.md  Song.py  SongController.java  TESTING.md  TOOLS.md  UI_AUDIT.md  UI_REVIEW_GROK.md  WARP.md  app.py  audit_check_result.txt  backup_before_nuke.bat  cov.txt  coverage.json  db_manager.py  debug_db_check.py  debug_dialogs_out.txt  debug_dialogs_try2.txt  debug_dialogs_try3.txt  debug_tables.py  debug_test_output.txt  deldb.bat  (+53 more)
.agent/: AGENT_PROTOCOL.md  AUDIT_HISTORY_REVIEW.md  CLEAN_CODE.md  GOSLING_VOW.md  PROPOSAL_ALBUMS.md  PROPOSAL_APP_MODES.md  PROPOSAL_FIELD_REGISTRY.md  PROPOSAL_LIBRARY_VIEWS.md  PROPOSAL_METADATA_EDITOR.md  PROPOSAL_TAG_EDITOR.md  PROPOSAL_TRANSACTION_LOG.md  REFACTOR_MANIFEST.md  SOA_ANALYSIS.md  SOA_FIXES_COMPLETE.md  TODO_FIELD_REGISTRY.md  today.md
.claude/: launch.json  settings.local.json
.mulch/: mulch.config.yaml
design/: DATABASE.md  FIELD_REGISTRY.md  FIELD_REGISTRY.md.bak  INDEX.md  LEGACY_LOGIC.md  LOGGING.md  PROJECT_SUMMARY.md  QUICK_START.md  README.md  TAGS.md  UX_UI_CONSTITUTION.md  WISHLIST.md  tasks.md  tests.md
docs/: ARCHITECTURE.md  AUDIT_REFACTOR_SPEC.md  AUDIT_REPORT_REPOSITORIES.md  CRUD_AUDIT.md  DATABASE.md  DATABASE.md.bak  EDIT_MODAL_ARCHITECTURE.md  FEATURES.md  GOSLING3_ROADMAP.md  (+67 more)
(+904 files in other folders)
